--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="col-sm-12">
                     <div class="jumbotron jumbotron-fluid">
                         <div class="container">
-                            <h1 class="display-3">Bienvenidos a mi web</h1>
+                            <h1 class="display-3">Bienvenidos a mi nueva web</h1>
                             <p class="lead">Páginas web desde 1998</p>
                         </div>
                     </div>
